syntax = "proto3";
package DouDizhu;

option go_package = "network/protodef";
option csharp_namespace = "Network.Proto";

import "Error.proto";
import "ChatMsg.proto";
import "Player.proto";

message PGameMsgHeader {
	// 用于标识请求的唯一id
	int64 messageId = 1;
	PPlayer player = 2;
}

message PGameClientMessage {
	PGameMsgHeader header = 1;
	oneof content {
		PChatMsgRequest chatMsg = 2;
	}
}

message PGameServerMessage {
	oneof content {
		PGameMsgRespPacket response = 1;
		PGameNotificationPacket notification = 2;
	}
}

message PGameMsgRespPacket {
	PGameMsgHeader header = 1;
	oneof content {
		PError error = 2;
		PCommonResponse commonResponse = 3;
	}
}

message PGameNotificationPacket {
	oneof content {
		PChatMsgNotification chatMsg = 1;
	}
}

// 不需要返回值可用这个
message PCommonResponse {
	
}